Updated page Sketcher Workbench/cs

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -48,11 +48,8 @@
 <h2><span class="mw-headline" id="Vazby">Vazby</span></h2>
 <p>Vazby se pou&#382;&iacute;vaj&iacute; k omezen&iacute; stup&#328;&#367; volnosti objektu. Nap&#345;&iacute;klad p&#345;&iacute;mka bez vazeb m&aacute; 4 stupn&#283; volnosti (zkr&aacute;cen&#283; &bdquo;DoF&ldquo;): lze ji posouvat vodorovn&#283; nebo svisle, lze ji nat&aacute;hnout a lze ji ot&aacute;&#269;et.
 </p><p>Pou&#382;it&iacute; vodorovn&eacute; nebo svisl&eacute; vazby nebo vazbu &uacute;hlu (relativn&#283; k jin&eacute; p&#345;&iacute;mce nebo k n&#283;kter&eacute; z os) omez&iacute; jej&iacute; mo&#382;nosti ot&aacute;&#269;en&iacute;, tak&#382;e j&iacute; zbudou jen t&#345;i stupn&#283; volnosti. Zavazben&iacute; jednoho bodu v relaci k po&#269;&aacute;tku odebere dal&scaron;&iacute; 2 stupn&#283; volnosti. A aplikace vazby rozm&#283;ru odebere posledn&iacute; stupe&#328; volnosti. P&#345;&iacute;mka je potom pova&#382;ov&aacute;na za <b>pln&#283; vazbenou</b>.
+</p><p>Objekty lze vz&aacute;jemn&#283; v&aacute;zat. Dv&#283; p&#345;&iacute;mky lze spojit v jednom z jejich bod&#367; pomoc&iacute; vazby soub&#283;hu. Mezi nimi lze nastavit &uacute;hel nebo je lze nastavit jako kolm&eacute;. P&#345;&iacute;mka m&#367;&#382;e b&yacute;t te&#269;n&aacute; k oblouku nebo kru&#382;nici atd. N&aacute;&#269;rt m&#367;&#382;e m&iacute;t n&#283;kolik r&#367;zn&yacute;ch &#345;e&scaron;en&iacute; a jeho <i>pln&eacute; zavazben&iacute;</i> m&#367;&#382;e znamenat, &#382;e na z&aacute;klad&#283; pou&#382;it&yacute;ch vazeb bylo dosa&#382;eno pouze jednoho z t&#283;chto mo&#382;n&yacute;ch &#345;e&scaron;en&iacute;. Viz tak&eacute;: <a href="#Flipping">P&#345;ekl&aacute;p&#283;n&iacute;</a>.
 </p>
-<div class="mw-translate-fuzzy">
-<p>V&iacute;ce objekt&#367; m&#367;&#382;e b&yacute;t vazbeno mezi sebou vz&aacute;jemn&#283;. Dv&#283; p&#345;&iacute;mky mohou b&yacute;t spojeny prost&#345;ednictv&iacute;m jejich bod&#367; pomoc&iacute; vazby souhlasn&yacute;ch bod&#367;. M&#367;&#382;e b&yacute;t nastaven &uacute;hel mezi nimi nebo mohou b&yacute;t nastaveny kolmo k sob&#283;. P&#345;&iacute;mka se m&#367;&#382;e dot&yacute;kat oblouku nebo kru&#382;nice, atd.
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Jsou dva druhy vazeb: konstruk&#269;n&iacute; a rozm&#283;rov&eacute;. Detailn&#283; jsou rozebr&aacute;ny v sekci <a href="#The_tools">'N&aacute;stroje'</a> d&aacute;le.
 </p>
@@ -840,12 +837,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118103401
+Cached time: 20260118103807
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.438 seconds
-Real time usage: 0.642 seconds
+CPU time usage: 0.436 seconds
+Real time usage: 0.731 seconds
 Preprocessor visited node count: 1568/1000000
 Post&#8208;expand include size: 34973/2097152 bytes
 Template argument size: 9764/2097152 bytes
@@ -856,19 +853,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.707      1 -total
- 28.11%   10.882      1 Template:Sketcher_Tools_navi/cs
- 14.72%    5.698      2 Template:Navigation_menu_2
- 13.87%    5.368      1 Template:Userdocnavi/cs
-  8.04%    3.112      1 Template:PropertyView
-  7.48%    2.896     35 Template:Version
-  6.05%    2.341      6 Template:Caption
-  5.66%    2.189      2 Template:Docnav
-  4.91%    1.901     14 Template:KEY
-  4.71%    1.823      5 Template:MenuCommand
+100.00%   89.256      1 -total
+ 21.59%   19.271      1 Template:Sketcher_Tools_navi/cs
+ 17.68%   15.779      2 Template:Navigation_menu_2
+ 14.22%   12.692      1 Template:Userdocnavi/cs
+ 12.37%   11.043      2 Template:Docnav
+  9.93%    8.862     14 Template:KEY
+  7.02%    6.263      1 Template:PropertyView
+  6.60%    5.891     35 Template:Version
+  6.48%    5.780      6 Template:Caption
+  6.42%    5.730      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103400 and revision id 1740191. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103807 and revision id 1740193. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
