Created page with "=== Úpravy vazeb ==="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -50,10 +50,9 @@
 </p><p>Pou&#382;it&iacute; vodorovn&eacute; nebo svisl&eacute; vazby nebo vazbu &uacute;hlu (relativn&#283; k jin&eacute; p&#345;&iacute;mce nebo k n&#283;kter&eacute; z os) omez&iacute; jej&iacute; mo&#382;nosti ot&aacute;&#269;en&iacute;, tak&#382;e j&iacute; zbudou jen t&#345;i stupn&#283; volnosti. Zavazben&iacute; jednoho bodu v relaci k po&#269;&aacute;tku odebere dal&scaron;&iacute; 2 stupn&#283; volnosti. A aplikace vazby rozm&#283;ru odebere posledn&iacute; stupe&#328; volnosti. P&#345;&iacute;mka je potom pova&#382;ov&aacute;na za <b>pln&#283; vazbenou</b>.
 </p><p>Objekty lze vz&aacute;jemn&#283; v&aacute;zat. Dv&#283; p&#345;&iacute;mky lze spojit v jednom z jejich bod&#367; pomoc&iacute; vazby soub&#283;hu. Mezi nimi lze nastavit &uacute;hel nebo je lze nastavit jako kolm&eacute;. P&#345;&iacute;mka m&#367;&#382;e b&yacute;t te&#269;n&aacute; k oblouku nebo kru&#382;nici atd. N&aacute;&#269;rt m&#367;&#382;e m&iacute;t n&#283;kolik r&#367;zn&yacute;ch &#345;e&scaron;en&iacute; a jeho <i>pln&eacute; zavazben&iacute;</i> m&#367;&#382;e znamenat, &#382;e na z&aacute;klad&#283; pou&#382;it&yacute;ch vazeb bylo dosa&#382;eno pouze jednoho z t&#283;chto mo&#382;n&yacute;ch &#345;e&scaron;en&iacute;. Viz tak&eacute;: <a href="#Flipping">P&#345;ekl&aacute;p&#283;n&iacute;</a>.
 </p><p>Existuj&iacute; dva druhy vazeb: geometrick&eacute; a rozm&#283;rov&eacute;. Jsou podrobn&#283; pops&aacute;ny v sekci <a href="#Tools">N&aacute;stroje</a> n&iacute;&#382;e.
+</p><p><span id="Edit_constraints"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Edit_constraints">Edit constraints</span></h3>
-</div>
+<h3><span id=".C3.9Apravy_vazeb"></span><span class="mw-headline" id="&Uacute;pravy_vazeb">&Uacute;pravy vazeb</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>When a <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">driving dimensional constraint</a> is created, and if the <b>Ask for value after creating a dimensional constraint</b> <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">preference</a> is selected (default), a dialog opens to edit its value.
 </p>
@@ -834,12 +833,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118103916
+Cached time: 20260118103950
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.369 seconds
-Real time usage: 0.466 seconds
+Real time usage: 0.485 seconds
 Preprocessor visited node count: 1567/1000000
 Post&#8208;expand include size: 34973/2097152 bytes
 Template argument size: 9764/2097152 bytes
@@ -850,19 +849,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.601      1 -total
- 23.12%    7.536      1 Template:Sketcher_Tools_navi/cs
- 19.25%    6.276      1 Template:Userdocnavi/cs
- 17.40%    5.671      2 Template:Navigation_menu_2
-  8.65%    2.821      1 Template:PropertyView
-  7.27%    2.369     35 Template:Version
-  6.76%    2.203      2 Template:Docnav
-  5.47%    1.783      6 Template:Caption
-  4.79%    1.563      1 Template:Variable
-  4.34%    1.415      8 Template:VersionPlus
+100.00%   25.207      1 -total
+ 23.02%    5.802      1 Template:Sketcher_Tools_navi/cs
+ 16.36%    4.123      2 Template:Navigation_menu_2
+ 13.41%    3.381      1 Template:Userdocnavi/cs
+  9.14%    2.304      1 Template:PropertyView
+  7.96%    2.005     35 Template:Version
+  7.41%    1.868      2 Template:Docnav
+  5.92%    1.493      6 Template:Caption
+  5.48%    1.382      8 Template:VersionPlus
+  4.97%    1.252     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103915 and revision id 1740195. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103949 and revision id 1740197. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
