--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -53,11 +53,8 @@
 </p><p><span id="Edit_constraints"></span>
 </p>
 <h3><span id=".C3.9Apravy_vazeb"></span><span class="mw-headline" id="&Uacute;pravy_vazeb">&Uacute;pravy vazeb</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>When a <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">driving dimensional constraint</a> is created, and if the <b>Ask for value after creating a dimensional constraint</b> <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">preference</a> is selected (default), a dialog opens to edit its value.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_Edit_Constraint.png&amp;filetimestamp=20240311180650&amp;.html" class="mw-file-description" title="Sketcher_Edit_Constraint.png"><img alt="Sketcher_Edit_Constraint.png" src="../File/Sketcher_Edit_Constraint.png" decoding="async" width="261" height="157" class="mw-file-element" data-file-width="261" data-file-height="157"></a></span>
+<p>P&#345;i vytvo&#345;en&iacute; <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">&#345;&iacute;d&iacute;c&iacute;ho rozm&#283;rov&eacute;ho omezen&iacute;</a> a pokud je vybr&aacute;na p&#345;edvolba <b>Po vytvo&#345;en&iacute; dimenzion&aacute;ln&iacute;ho omezen&iacute; se zeptat na hodnotu</b> v <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">p&#345;edvolb&aacute;ch</a> (v&yacute;choz&iacute; nastaven&iacute;), otev&#345;e se dialogov&eacute; okno pro &uacute;pravu jeho hodnoty.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_Edit_Constraint.png&amp;filetimestamp=20240311180650&amp;.html" class="mw-file-description" title="Sketcher_Edit_Constraint.png"><img alt="Sketcher_Edit_Constraint.png" src="../File/Sketcher_Edit_Constraint.png" decoding="async" width="261" height="157" class="mw-file-element" data-file-width="261" data-file-height="157"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>You can enter a numerical value or an <a href="../Expressions.html" title="Expressions">expression</a>, and it is possible to name the constraint to facilitate its use in other expressions. You can also check the <b>Reference</b> checkbox to switch the constrain to <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">reference mode</a>.
@@ -833,15 +830,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118103950
+Cached time: 20260118104255
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.369 seconds
-Real time usage: 0.485 seconds
-Preprocessor visited node count: 1567/1000000
-Post&#8208;expand include size: 34973/2097152 bytes
-Template argument size: 9764/2097152 bytes
+CPU time usage: 0.383 seconds
+Real time usage: 0.659 seconds
+Preprocessor visited node count: 1566/1000000
+Post&#8208;expand include size: 34982/2097152 bytes
+Template argument size: 9773/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -849,19 +846,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.207      1 -total
- 23.02%    5.802      1 Template:Sketcher_Tools_navi/cs
- 16.36%    4.123      2 Template:Navigation_menu_2
- 13.41%    3.381      1 Template:Userdocnavi/cs
-  9.14%    2.304      1 Template:PropertyView
-  7.96%    2.005     35 Template:Version
-  7.41%    1.868      2 Template:Docnav
-  5.92%    1.493      6 Template:Caption
-  5.48%    1.382      8 Template:VersionPlus
-  4.97%    1.252     14 Template:KEY
+100.00%   76.259      1 -total
+ 20.86%   15.911      1 Template:Sketcher_Tools_navi/cs
+ 15.70%   11.969      1 Template:Userdocnavi/cs
+ 13.75%   10.486     14 Template:KEY
+  9.50%    7.247      6 Template:Caption
+  8.26%    6.295      2 Template:Navigation_menu_2
+  8.04%    6.128      1 Template:PropertyView
+  6.38%    4.865      5 Template:MenuCommand
+  5.85%    4.460     35 Template:Version
+  5.55%    4.234      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103949 and revision id 1740197. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118104254 and revision id 1740199. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
