--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -55,11 +55,8 @@
 <h3><span id=".C3.9Apravy_vazeb"></span><span class="mw-headline" id="&Uacute;pravy_vazeb">&Uacute;pravy vazeb</span></h3>
 <p>P&#345;i vytvo&#345;en&iacute; <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">&#345;&iacute;d&iacute;c&iacute;ho rozm&#283;rov&eacute;ho omezen&iacute;</a> a pokud je vybr&aacute;na p&#345;edvolba <b>Po vytvo&#345;en&iacute; dimenzion&aacute;ln&iacute;ho omezen&iacute; se zeptat na hodnotu</b> v <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">p&#345;edvolb&aacute;ch</a> (v&yacute;choz&iacute; nastaven&iacute;), otev&#345;e se dialogov&eacute; okno pro &uacute;pravu jeho hodnoty.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_Edit_Constraint.png&amp;filetimestamp=20240311180650&amp;.html" class="mw-file-description" title="Sketcher_Edit_Constraint.png"><img alt="Sketcher_Edit_Constraint.png" src="../File/Sketcher_Edit_Constraint.png" decoding="async" width="261" height="157" class="mw-file-element" data-file-width="261" data-file-height="157"></a></span>
+</p><p>M&#367;&#382;ete zadat &#269;&iacute;selnou hodnotu nebo <a href="../Expressions.html" title="Expressions">v&yacute;raz</a> a je mo&#382;n&eacute; vazbu pojmenovat, aby se usnadnilo jeho pou&#382;it&iacute; v jin&yacute;ch v&yacute;razech. M&#367;&#382;ete tak&eacute; za&scaron;krtnout pol&iacute;&#269;ko <b>Reference</b>, aby se vazba p&#345;epnula do <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">referen&#269;n&iacute;ho re&#382;imu</a>.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>You can enter a numerical value or an <a href="../Expressions.html" title="Expressions">expression</a>, and it is possible to name the constraint to facilitate its use in other expressions. You can also check the <b>Reference</b> checkbox to switch the constrain to <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">reference mode</a>.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>To edit the value of an existing dimensional constraint do one of the following:
 </p>
@@ -830,13 +827,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118104255
+Cached time: 20260118104705
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.383 seconds
-Real time usage: 0.659 seconds
-Preprocessor visited node count: 1566/1000000
+CPU time usage: 0.364 seconds
+Real time usage: 0.509 seconds
+Preprocessor visited node count: 1565/1000000
 Post&#8208;expand include size: 34982/2097152 bytes
 Template argument size: 9773/2097152 bytes
 Highest expansion depth: 7/100
@@ -846,19 +843,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   76.259      1 -total
- 20.86%   15.911      1 Template:Sketcher_Tools_navi/cs
- 15.70%   11.969      1 Template:Userdocnavi/cs
- 13.75%   10.486     14 Template:KEY
-  9.50%    7.247      6 Template:Caption
-  8.26%    6.295      2 Template:Navigation_menu_2
-  8.04%    6.128      1 Template:PropertyView
-  6.38%    4.865      5 Template:MenuCommand
-  5.85%    4.460     35 Template:Version
-  5.55%    4.234      8 Template:VersionPlus
+100.00%   34.112      1 -total
+ 23.30%    7.948      1 Template:Sketcher_Tools_navi/cs
+ 14.52%    4.953      1 Template:Userdocnavi/cs
+ 13.04%    4.447      2 Template:Navigation_menu_2
+  9.24%    3.151      1 Template:PropertyView
+  8.41%    2.870     35 Template:Version
+  7.45%    2.540      2 Template:Docnav
+  6.25%    2.133     14 Template:KEY
+  6.10%    2.080      8 Template:VersionPlus
+  5.73%    1.956      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118104254 and revision id 1740199. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118104705 and revision id 1740201. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
