--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -56,14 +56,11 @@
 <p>P&#345;i vytvo&#345;en&iacute; <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">&#345;&iacute;d&iacute;c&iacute;ho rozm&#283;rov&eacute;ho omezen&iacute;</a> a pokud je vybr&aacute;na p&#345;edvolba <b>Po vytvo&#345;en&iacute; dimenzion&aacute;ln&iacute;ho omezen&iacute; se zeptat na hodnotu</b> v <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">p&#345;edvolb&aacute;ch</a> (v&yacute;choz&iacute; nastaven&iacute;), otev&#345;e se dialogov&eacute; okno pro &uacute;pravu jeho hodnoty.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_Edit_Constraint.png&amp;filetimestamp=20240311180650&amp;.html" class="mw-file-description" title="Sketcher_Edit_Constraint.png"><img alt="Sketcher_Edit_Constraint.png" src="../File/Sketcher_Edit_Constraint.png" decoding="async" width="261" height="157" class="mw-file-element" data-file-width="261" data-file-height="157"></a></span>
 </p><p>M&#367;&#382;ete zadat &#269;&iacute;selnou hodnotu nebo <a href="../Expressions.html" title="Expressions">v&yacute;raz</a> a je mo&#382;n&eacute; vazbu pojmenovat, aby se usnadnilo jeho pou&#382;it&iacute; v jin&yacute;ch v&yacute;razech. M&#367;&#382;ete tak&eacute; za&scaron;krtnout pol&iacute;&#269;ko <b>Reference</b>, aby se vazba p&#345;epnula do <a href="../Sketcher_ToggleDrivingConstraint.html" title="Sketcher ToggleDrivingConstraint">referen&#269;n&iacute;ho re&#382;imu</a>.
+</p><p>Chcete-li upravit hodnotu existuj&iacute;c&iacute; rozm&#283;rov&eacute; vazby, prove&#271;te jednu z n&aacute;sleduj&iacute;c&iacute;ch akc&iacute;:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>To edit the value of an existing dimensional constraint do one of the following:
-</p>
-<ul><li>Double-click the constraint value in the <a href="../3D_View.html" title="3D View">3D View</a>.</li>
-<li>Double-click the constraint in the <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Sketcher Dialog</a>.</li>
-<li>Right-click the constraint in the Sketcher Dialog and select the <b>Change value</b> option from the context menu.</li></ul>
-</div>
+<ul><li>Poklepejte na hodnotu vazby v <a href="../3D_View.html" title="3D View">3D pohledu</a>.</li>
+<li>Poklepejte na vazbu v  <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">dialogov&eacute;m okn&#283; sketcheru</a>.</li>
+<li>Klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na vazbu v dialogov&eacute;m okn&#283; Sketcheru a z kontextov&eacute;ho menu vyberte mo&#382;nost <b>Zm&#283;nit hodnotu</b>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Reposition_constraints">Reposition constraints</span></h3>
 </div>
@@ -827,15 +824,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118104705
+Cached time: 20260118105108
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.364 seconds
-Real time usage: 0.509 seconds
-Preprocessor visited node count: 1565/1000000
-Post&#8208;expand include size: 34982/2097152 bytes
-Template argument size: 9773/2097152 bytes
+CPU time usage: 0.387 seconds
+Real time usage: 0.557 seconds
+Preprocessor visited node count: 1564/1000000
+Post&#8208;expand include size: 34985/2097152 bytes
+Template argument size: 9776/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -843,19 +840,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.112      1 -total
- 23.30%    7.948      1 Template:Sketcher_Tools_navi/cs
- 14.52%    4.953      1 Template:Userdocnavi/cs
- 13.04%    4.447      2 Template:Navigation_menu_2
-  9.24%    3.151      1 Template:PropertyView
-  8.41%    2.870     35 Template:Version
-  7.45%    2.540      2 Template:Docnav
-  6.25%    2.133     14 Template:KEY
-  6.10%    2.080      8 Template:VersionPlus
-  5.73%    1.956      1 Template:TOCright
+100.00%   42.424      1 -total
+ 27.73%   11.764      1 Template:Userdocnavi/cs
+ 21.23%    9.008      1 Template:Sketcher_Tools_navi/cs
+ 13.23%    5.611      2 Template:Navigation_menu_2
+ 11.67%    4.949      1 Template:PropertyView
+  6.92%    2.936      6 Template:Caption
+  5.75%    2.439     35 Template:Version
+  5.73%    2.431      1 Template:Variable
+  4.87%    2.065      2 Template:Docnav
+  3.40%    1.441     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118104705 and revision id 1740201. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105107 and revision id 1740203. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
