--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -61,9 +61,9 @@
 <ul><li>Poklepejte na hodnotu vazby v <a href="../3D_View.html" title="3D View">3D pohledu</a>.</li>
 <li>Poklepejte na vazbu v  <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">dialogov&eacute;m okn&#283; sketcheru</a>.</li>
 <li>Klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na vazbu v dialogov&eacute;m okn&#283; Sketcheru a z kontextov&eacute;ho menu vyberte mo&#382;nost <b>Zm&#283;nit hodnotu</b>.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Reposition_constraints">Reposition constraints</span></h3>
-</div>
+<p><span id="Reposition_constraints"></span>
+</p>
+<h3><span id="P.C5.99esunut.C3.AD_omezen.C3.AD"></span><span class="mw-headline" id="P&#345;esunut&iacute;_omezen&iacute;">P&#345;esunut&iacute; omezen&iacute;</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Dimensional constraints can be repositioned in the 3D View by dragging. Hold down the left mouse button over the constraint value and move the mouse. The symbols of geometric constraints are positioned automatically and cannot be moved.
 </p>
@@ -824,12 +824,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118105108
+Cached time: 20260118105143
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.387 seconds
-Real time usage: 0.557 seconds
+CPU time usage: 0.485 seconds
+Real time usage: 0.695 seconds
 Preprocessor visited node count: 1564/1000000
 Post&#8208;expand include size: 34985/2097152 bytes
 Template argument size: 9776/2097152 bytes
@@ -840,19 +840,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.424      1 -total
- 27.73%   11.764      1 Template:Userdocnavi/cs
- 21.23%    9.008      1 Template:Sketcher_Tools_navi/cs
- 13.23%    5.611      2 Template:Navigation_menu_2
- 11.67%    4.949      1 Template:PropertyView
-  6.92%    2.936      6 Template:Caption
-  5.75%    2.439     35 Template:Version
-  5.73%    2.431      1 Template:Variable
-  4.87%    2.065      2 Template:Docnav
-  3.40%    1.441     14 Template:KEY
+100.00%   48.907      1 -total
+ 26.09%   12.759      1 Template:Sketcher_Tools_navi/cs
+ 15.34%    7.502      1 Template:PropertyView
+ 11.76%    5.752      1 Template:Userdocnavi/cs
+ 11.25%    5.503      2 Template:Navigation_menu_2
+  7.14%    3.492      1 Template:Variable
+  6.45%    3.157      2 Template:Docnav
+  6.45%    3.153      6 Template:Caption
+  5.28%    2.580     35 Template:Version
+  5.02%    2.455     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105107 and revision id 1740203. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105142 and revision id 1740205. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
