--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -64,10 +64,8 @@
 <p><span id="Reposition_constraints"></span>
 </p>
 <h3><span id="P.C5.99esunut.C3.AD_omezen.C3.AD"></span><span class="mw-headline" id="P&#345;esunut&iacute;_omezen&iacute;">P&#345;esunut&iacute; omezen&iacute;</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Dimensional constraints can be repositioned in the 3D View by dragging. Hold down the left mouse button over the constraint value and move the mouse. The symbols of geometric constraints are positioned automatically and cannot be moved.
+<p>Dimenzion&aacute;ln&iacute; vazbu lze ve 3D zobrazen&iacute; p&#345;em&iacute;stit ta&#382;en&iacute;m. Podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad hodnotou vazby a pohybujte my&scaron;&iacute;. Symboly geometrick&yacute;ch vazeb jsou um&iacute;st&#283;ny automaticky a nelze je p&#345;esouvat.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Profile_sketches">Profile sketches</span></h2>
 </div>
@@ -824,13 +822,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118105143
+Cached time: 20260118105340
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.485 seconds
-Real time usage: 0.695 seconds
-Preprocessor visited node count: 1564/1000000
+CPU time usage: 0.415 seconds
+Real time usage: 0.905 seconds
+Preprocessor visited node count: 1563/1000000
 Post&#8208;expand include size: 34985/2097152 bytes
 Template argument size: 9776/2097152 bytes
 Highest expansion depth: 7/100
@@ -840,19 +838,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.907      1 -total
- 26.09%   12.759      1 Template:Sketcher_Tools_navi/cs
- 15.34%    7.502      1 Template:PropertyView
- 11.76%    5.752      1 Template:Userdocnavi/cs
- 11.25%    5.503      2 Template:Navigation_menu_2
-  7.14%    3.492      1 Template:Variable
-  6.45%    3.157      2 Template:Docnav
-  6.45%    3.153      6 Template:Caption
-  5.28%    2.580     35 Template:Version
-  5.02%    2.455     14 Template:KEY
+100.00%   52.064      1 -total
+ 16.13%    8.396      1 Template:Sketcher_Tools_navi/cs
+ 15.24%    7.934     14 Template:KEY
+ 13.85%    7.210      1 Template:Userdocnavi/cs
+ 10.11%    5.263      2 Template:Navigation_menu_2
+  9.62%    5.011     35 Template:Version
+  8.70%    4.529      8 Template:VersionPlus
+  8.17%    4.256      6 Template:Caption
+  5.89%    3.069      1 Template:PropertyView
+  5.06%    2.633      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105142 and revision id 1740205. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105339 and revision id 1740207. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
