Created page with "== Náčrtky profilů =="

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -65,10 +65,9 @@
 </p>
 <h3><span id="P.C5.99esunut.C3.AD_omezen.C3.AD"></span><span class="mw-headline" id="P&#345;esunut&iacute;_omezen&iacute;">P&#345;esunut&iacute; omezen&iacute;</span></h3>
 <p>Dimenzion&aacute;ln&iacute; vazbu lze ve 3D zobrazen&iacute; p&#345;em&iacute;stit ta&#382;en&iacute;m. Podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad hodnotou vazby a pohybujte my&scaron;&iacute;. Symboly geometrick&yacute;ch vazeb jsou um&iacute;st&#283;ny automaticky a nelze je p&#345;esouvat.
+</p><p><span id="Profile_sketches"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Profile_sketches">Profile sketches</span></h2>
-</div>
+<h2><span id="N.C3.A1.C4.8Drtky_profil.C5.AF"></span><span class="mw-headline" id="N&aacute;&#269;rtky_profil&#367;">N&aacute;&#269;rtky profil&#367;</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>To create a sketch that can be used as a profile for generating solids certain rules must be followed:
 </p>
@@ -822,12 +821,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118105340
+Cached time: 20260118105446
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.415 seconds
-Real time usage: 0.905 seconds
+CPU time usage: 0.394 seconds
+Real time usage: 0.666 seconds
 Preprocessor visited node count: 1563/1000000
 Post&#8208;expand include size: 34985/2097152 bytes
 Template argument size: 9776/2097152 bytes
@@ -838,19 +837,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.064      1 -total
- 16.13%    8.396      1 Template:Sketcher_Tools_navi/cs
- 15.24%    7.934     14 Template:KEY
- 13.85%    7.210      1 Template:Userdocnavi/cs
- 10.11%    5.263      2 Template:Navigation_menu_2
-  9.62%    5.011     35 Template:Version
-  8.70%    4.529      8 Template:VersionPlus
-  8.17%    4.256      6 Template:Caption
-  5.89%    3.069      1 Template:PropertyView
-  5.06%    2.633      2 Template:Docnav
+100.00%   45.928      1 -total
+ 27.32%   12.547      1 Template:Userdocnavi/cs
+ 19.70%    9.046      1 Template:Sketcher_Tools_navi/cs
+ 11.73%    5.386      1 Template:PropertyView
+ 10.51%    4.829      2 Template:Navigation_menu_2
+  6.64%    3.048     35 Template:Version
+  5.88%    2.699      8 Template:VersionPlus
+  5.43%    2.492      1 Template:Variable
+  5.40%    2.480      5 Template:MenuCommand
+  4.43%    2.035      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105339 and revision id 1740207. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105446 and revision id 1740209. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
