Created page with "Při vytváření náčrtu, který lze použít jako profil pro generování těles, je třeba dodržovat určitá pravidla: # Náčrt musí obsahovat pouze uzavřené kontury. Mezery mezi koncovými body, jakkoli malé, nejsou povoleny. # Obrysy mohou být vnořené, aby vytvářely dutiny, ale neměly by se protínat samy se sebou ani s jinými obrysy. # Obrysy nemohou sdílet hrany s jinými obrysy. Duplicitní nebo překrývající se hrany nejsou povoleny. # T-spoje..."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -68,14 +68,12 @@
 </p><p><span id="Profile_sketches"></span>
 </p>
 <h2><span id="N.C3.A1.C4.8Drtky_profil.C5.AF"></span><span class="mw-headline" id="N&aacute;&#269;rtky_profil&#367;">N&aacute;&#269;rtky profil&#367;</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>To create a sketch that can be used as a profile for generating solids certain rules must be followed:
+<p>P&#345;i vytv&aacute;&#345;en&iacute; n&aacute;&#269;rtu, kter&yacute; lze pou&#382;&iacute;t jako profil pro generov&aacute;n&iacute; t&#283;les, je t&#345;eba dodr&#382;ovat ur&#269;it&aacute; pravidla:
 </p>
-<ol><li>The sketch must contain only closed contours. Gaps between endpoints, however small, are not allowed.</li>
-<li>Contours can be nested, to create voids, but should not self-intersect or intersect other contours.</li>
-<li>Contours cannot share edges with other contours. Duplicate or overlapping edges are not allowed.</li>
-<li>T-connections, that is more than two edges sharing a common point, or a point touching an edge, are not allowed.</li></ol>
-</div>
+<ol><li>N&aacute;&#269;rt mus&iacute; obsahovat pouze uzav&#345;en&eacute; kontury. Mezery mezi koncov&yacute;mi body, jakkoli mal&eacute;, nejsou povoleny.</li>
+<li>Obrysy mohou b&yacute;t vno&#345;en&eacute;, aby vytv&aacute;&#345;ely dutiny, ale nem&#283;ly by se prot&iacute;nat samy se sebou ani s jin&yacute;mi obrysy.</li>
+<li>Obrysy nemohou sd&iacute;let hrany s jin&yacute;mi obrysy. Duplicitn&iacute; nebo p&#345;ekr&yacute;vaj&iacute;c&iacute; se hrany nejsou povoleny.</li>
+<li>T-spojen&iacute;, tj. v&iacute;ce ne&#382; dv&#283; hrany sd&iacute;lej&iacute;c&iacute; spole&#269;n&yacute; bod nebo bod dot&yacute;kaj&iacute;c&iacute; se hrany, nejsou povolena.</li></ol>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_profile_sketches_2.png&amp;filetimestamp=20251007123749&amp;.html" class="mw-file-description"><img src="../File/Sketcher_profile_sketches_2.png" decoding="async" width="600" height="416" class="mw-file-element" data-file-width="817" data-file-height="567"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -821,13 +819,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118105446
+Cached time: 20260118105712
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.394 seconds
-Real time usage: 0.666 seconds
-Preprocessor visited node count: 1563/1000000
+CPU time usage: 0.445 seconds
+Real time usage: 0.659 seconds
+Preprocessor visited node count: 1562/1000000
 Post&#8208;expand include size: 34985/2097152 bytes
 Template argument size: 9776/2097152 bytes
 Highest expansion depth: 7/100
@@ -837,19 +835,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.928      1 -total
- 27.32%   12.547      1 Template:Userdocnavi/cs
- 19.70%    9.046      1 Template:Sketcher_Tools_navi/cs
- 11.73%    5.386      1 Template:PropertyView
- 10.51%    4.829      2 Template:Navigation_menu_2
-  6.64%    3.048     35 Template:Version
-  5.88%    2.699      8 Template:VersionPlus
-  5.43%    2.492      1 Template:Variable
-  5.40%    2.480      5 Template:MenuCommand
-  4.43%    2.035      2 Template:Docnav
+100.00%   41.066      1 -total
+ 23.07%    9.473      1 Template:Sketcher_Tools_navi/cs
+ 15.78%    6.482      2 Template:Navigation_menu_2
+ 12.34%    5.069      1 Template:Userdocnavi/cs
+ 10.59%    4.348      1 Template:TOCright
+  9.57%    3.930      1 Template:PropertyView
+  6.99%    2.872     35 Template:Version
+  6.83%    2.804      6 Template:Caption
+  6.24%    2.564      8 Template:VersionPlus
+  5.77%    2.370      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105446 and revision id 1740209. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105712 and revision id 1740211. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
