--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -76,13 +76,11 @@
 <li>T-spojen&iacute;, tj. v&iacute;ce ne&#382; dv&#283; hrany sd&iacute;lej&iacute;c&iacute; spole&#269;n&yacute; bod nebo bod dot&yacute;kaj&iacute;c&iacute; se hrany, nejsou povolena.</li></ol>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher_profile_sketches_2.png&amp;filetimestamp=20251007123749&amp;.html" class="mw-file-description"><img src="../File/Sketcher_profile_sketches_2.png" decoding="async" width="600" height="416" class="mw-file-element" data-file-width="817" data-file-height="567"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Invalid sketches:<br>
-1. Open contour (free endpoints highlighted by the <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch tool</a>)<br>
-2. Intersecting contours<br>
-3. Duplicate edges (endpoints of overlapping edges highlighted by the <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch tool</a>)<br>
-4. T-connections</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Neplatn&eacute; n&aacute;&#269;rtky:<br>
+1. Otev&#345;en&yacute; obrys (voln&eacute; koncov&eacute; body zv&yacute;razn&#283;n&eacute; n&aacute;strojem  <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Ov&#283;&#345;it n&aacute;&#269;rt</a>)<br>
+2. Prot&iacute;naj&iacute;c&iacute; se obrysy<br>
+3. Duplicitn&iacute; hrany (koncov&eacute; body p&#345;ekr&yacute;vaj&iacute;c&iacute;ch se hran zv&yacute;razn&#283;n&eacute; n&aacute;strojem  <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Ov&#283;&#345;it n&aacute;&#269;rt</a>)<br>
+4. T-spoje</p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>These rules do not apply to construction geometry (default color blue), which is not shown outside edit mode, or if the sketch is used for a different purpose. Depending on the workbench and the tool that will use the profile sketch, additional restrictions may apply.
 </p>
@@ -819,15 +817,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118105712
+Cached time: 20260118110204
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.445 seconds
+CPU time usage: 0.463 seconds
 Real time usage: 0.659 seconds
-Preprocessor visited node count: 1562/1000000
-Post&#8208;expand include size: 34985/2097152 bytes
-Template argument size: 9776/2097152 bytes
+Preprocessor visited node count: 1561/1000000
+Post&#8208;expand include size: 35041/2097152 bytes
+Template argument size: 9804/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -835,19 +833,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.066      1 -total
- 23.07%    9.473      1 Template:Sketcher_Tools_navi/cs
- 15.78%    6.482      2 Template:Navigation_menu_2
- 12.34%    5.069      1 Template:Userdocnavi/cs
- 10.59%    4.348      1 Template:TOCright
-  9.57%    3.930      1 Template:PropertyView
-  6.99%    2.872     35 Template:Version
-  6.83%    2.804      6 Template:Caption
-  6.24%    2.564      8 Template:VersionPlus
-  5.77%    2.370      5 Template:MenuCommand
+100.00%   42.645      1 -total
+ 19.99%    8.524      1 Template:Sketcher_Tools_navi/cs
+ 18.24%    7.777      1 Template:Userdocnavi/cs
+ 13.85%    5.908      2 Template:Navigation_menu_2
+ 13.32%    5.679      1 Template:PropertyView
+  7.79%    3.323      2 Template:Docnav
+  7.23%    3.082     35 Template:Version
+  6.19%    2.638      1 Template:Variable
+  5.56%    2.373      1 Template:TOCright
+  5.00%    2.134      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118105712 and revision id 1740211. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110203 and revision id 1740213. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
