--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -81,10 +81,8 @@
 2. Prot&iacute;naj&iacute;c&iacute; se obrysy<br>
 3. Duplicitn&iacute; hrany (koncov&eacute; body p&#345;ekr&yacute;vaj&iacute;c&iacute;ch se hran zv&yacute;razn&#283;n&eacute; n&aacute;strojem  <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Ov&#283;&#345;it n&aacute;&#269;rt</a>)<br>
 4. T-spoje</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>These rules do not apply to construction geometry (default color blue), which is not shown outside edit mode, or if the sketch is used for a different purpose. Depending on the workbench and the tool that will use the profile sketch, additional restrictions may apply.
+<p>Tato pravidla se nevztahuj&iacute; na konstruk&#269;n&iacute; geometrii (v&yacute;choz&iacute; barva modr&aacute;), kter&aacute; se nezobrazuje mimo re&#382;im &uacute;prav, nebo pokud je n&aacute;&#269;rt pou&#382;it pro jin&yacute; &uacute;&#269;el. V z&aacute;vislosti na pracovn&iacute;m prost&#345;ed&iacute; a n&aacute;stroji, kter&yacute; bude profilov&yacute; n&aacute;&#269;rt pou&#382;&iacute;vat, mohou platit dal&scaron;&iacute; omezen&iacute;.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Tools">Tools</span></h2>
 </div>
@@ -817,13 +815,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118110204
+Cached time: 20260118110327
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.463 seconds
-Real time usage: 0.659 seconds
-Preprocessor visited node count: 1561/1000000
+CPU time usage: 0.492 seconds
+Real time usage: 0.690 seconds
+Preprocessor visited node count: 1560/1000000
 Post&#8208;expand include size: 35041/2097152 bytes
 Template argument size: 9804/2097152 bytes
 Highest expansion depth: 7/100
@@ -833,19 +831,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.645      1 -total
- 19.99%    8.524      1 Template:Sketcher_Tools_navi/cs
- 18.24%    7.777      1 Template:Userdocnavi/cs
- 13.85%    5.908      2 Template:Navigation_menu_2
- 13.32%    5.679      1 Template:PropertyView
-  7.79%    3.323      2 Template:Docnav
-  7.23%    3.082     35 Template:Version
-  6.19%    2.638      1 Template:Variable
-  5.56%    2.373      1 Template:TOCright
-  5.00%    2.134      5 Template:MenuCommand
+100.00%   41.749      1 -total
+ 22.13%    9.241      1 Template:Sketcher_Tools_navi/cs
+ 15.12%    6.312      1 Template:Userdocnavi/cs
+ 12.39%    5.173      2 Template:Navigation_menu_2
+ 10.47%    4.373      1 Template:PropertyView
+  8.78%    3.667     35 Template:Version
+  6.32%    2.638      8 Template:VersionPlus
+  6.05%    2.525      2 Template:Docnav
+  5.86%    2.447      6 Template:Caption
+  5.72%    2.390     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110203 and revision id 1740213. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110326 and revision id 1740215. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
