--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -82,12 +82,11 @@
 3. Duplicitn&iacute; hrany (koncov&eacute; body p&#345;ekr&yacute;vaj&iacute;c&iacute;ch se hran zv&yacute;razn&#283;n&eacute; n&aacute;strojem  <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Ov&#283;&#345;it n&aacute;&#269;rt</a>)<br>
 4. T-spoje</p>
 <p>Tato pravidla se nevztahuj&iacute; na konstruk&#269;n&iacute; geometrii (v&yacute;choz&iacute; barva modr&aacute;), kter&aacute; se nezobrazuje mimo re&#382;im &uacute;prav, nebo pokud je n&aacute;&#269;rt pou&#382;it pro jin&yacute; &uacute;&#269;el. V z&aacute;vislosti na pracovn&iacute;m prost&#345;ed&iacute; a n&aacute;stroji, kter&yacute; bude profilov&yacute; n&aacute;&#269;rt pou&#382;&iacute;vat, mohou platit dal&scaron;&iacute; omezen&iacute;.
+</p><p><span id="Tools"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Tools">Tools</span></h2>
-</div>
+<h2><span id="N.C3.A1stroje"></span><span class="mw-headline" id="N&aacute;stroje">N&aacute;stroje</span></h2>
 <div class="mw-translate-fuzzy">
-<h3><span id="N.C3.A1stroje"></span><span class="mw-headline" id="N&aacute;stroje">N&aacute;stroje</span></h3>
+<h3><span id="N.C3.A1stroje_2"></span><span class="mw-headline" id="N&aacute;stroje_2">N&aacute;stroje</span></h3>
 <p>N&aacute;stroje pracovn&iacute; plochy Skic&aacute;&#345; jsou um&iacute;st&#283;ny v menu Skic&aacute;&#345;, kter&eacute; se zobraz&iacute; kdy&#382; nat&aacute;hnete pracovn&iacute; plochu Skic&aacute;&#345;.
 </p>
 </div>
@@ -815,12 +814,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118110327
+Cached time: 20260118110338
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.492 seconds
-Real time usage: 0.690 seconds
+CPU time usage: 0.402 seconds
+Real time usage: 0.762 seconds
 Preprocessor visited node count: 1560/1000000
 Post&#8208;expand include size: 35041/2097152 bytes
 Template argument size: 9804/2097152 bytes
@@ -831,19 +830,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.749      1 -total
- 22.13%    9.241      1 Template:Sketcher_Tools_navi/cs
- 15.12%    6.312      1 Template:Userdocnavi/cs
- 12.39%    5.173      2 Template:Navigation_menu_2
- 10.47%    4.373      1 Template:PropertyView
-  8.78%    3.667     35 Template:Version
-  6.32%    2.638      8 Template:VersionPlus
-  6.05%    2.525      2 Template:Docnav
-  5.86%    2.447      6 Template:Caption
-  5.72%    2.390     14 Template:KEY
+100.00%   68.352      1 -total
+ 23.48%   16.051      1 Template:Userdocnavi/cs
+ 22.65%   15.484      1 Template:Sketcher_Tools_navi/cs
+ 16.69%   11.409      2 Template:Navigation_menu_2
+  8.68%    5.931      1 Template:PropertyView
+  8.58%    5.866     35 Template:Version
+  6.96%    4.760      2 Template:Docnav
+  4.69%    3.204      8 Template:VersionPlus
+  4.67%    3.194     14 Template:KEY
+  4.58%    3.130      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110326 and revision id 1740215. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110337 and revision id 1740217. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
