Created page with "{{Version|0.21}}: Pokud je skica v režimu úprav, panel nástrojů Struktura je skrytý, protože žádný z jeho nástrojů nelze použít."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -87,11 +87,8 @@
 <h2><span id="N.C3.A1stroje"></span><span class="mw-headline" id="N&aacute;stroje">N&aacute;stroje</span></h2>
 <p>N&aacute;stroje pracovn&iacute; plochy Sketcher se nach&aacute;zej&iacute; v menu Sketch a/nebo v n&#283;kolika panelech n&aacute;stroj&#367;. <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>: T&eacute;m&#283;&#345; v&scaron;echny panely n&aacute;stroj&#367; Sketcheru se zobrazuj&iacute; pouze v re&#382;imu &uacute;pravy skici. Jedinou v&yacute;jimkou je <a href="#Sketcher_toolbar">panel n&aacute;stroj&#367; Sketcheru</a>, kter&yacute; se zobrazuje pouze v p&#345;&iacute;pad&#283;, &#382;e &#382;&aacute;dn&aacute; skica nen&iacute; v re&#382;imu &uacute;pravy.
 </p><p>N&#283;kter&eacute; n&aacute;stroje jsou tak&eacute; k dispozici v kontextov&eacute;m menu <a href="../3D_View.html" title="3D View">3D pohledu</a>, kdy&#382; je skica v re&#382;imu &uacute;prav, nebo v kontextov&yacute;ch menu <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">dialogov&eacute;ho okna Sketcher</a>.
+</p><p><span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>: Pokud je skica v re&#382;imu &uacute;prav, panel n&aacute;stroj&#367; Struktura je skryt&yacute;, proto&#382;e &#382;&aacute;dn&yacute; z jeho n&aacute;stroj&#367; nelze pou&#382;&iacute;t. 
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>: If a sketch is in edit mode the Structure toolbar is hidden as none of its tools can then be used.
-</p>
-</div> 
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="General">General</span></h3>
 </div>
@@ -808,13 +805,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118110636
+Cached time: 20260118110711
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.472 seconds
-Real time usage: 0.720 seconds
-Preprocessor visited node count: 1564/1000000
+CPU time usage: 0.391 seconds
+Real time usage: 0.655 seconds
+Preprocessor visited node count: 1563/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -824,19 +821,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.040      1 -total
- 26.10%   11.756      1 Template:Sketcher_Tools_navi/cs
- 14.43%    6.498      2 Template:Navigation_menu_2
- 12.75%    5.743      1 Template:PropertyView
- 11.73%    5.283      1 Template:Userdocnavi/cs
-  8.62%    3.880      6 Template:Caption
-  6.66%    3.000      1 Template:Variable
-  6.56%    2.954     14 Template:KEY
-  6.37%    2.871     36 Template:Version
-  6.03%    2.718      5 Template:MenuCommand
+100.00%   36.433      1 -total
+ 17.81%    6.488      1 Template:Sketcher_Tools_navi/cs
+ 17.36%    6.324     36 Template:Version
+ 12.64%    4.605      2 Template:Navigation_menu_2
+ 12.17%    4.433      1 Template:Userdocnavi/cs
+  7.72%    2.811      1 Template:PropertyView
+  6.89%    2.511      2 Template:Docnav
+  6.29%    2.290      1 Template:TOCright
+  5.15%    1.877      6 Template:Caption
+  4.91%    1.788     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110635 and revision id 1740221. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110710 and revision id 1740223. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
