--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -88,10 +88,9 @@
 <p>N&aacute;stroje pracovn&iacute; plochy Sketcher se nach&aacute;zej&iacute; v menu Sketch a/nebo v n&#283;kolika panelech n&aacute;stroj&#367;. <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>: T&eacute;m&#283;&#345; v&scaron;echny panely n&aacute;stroj&#367; Sketcheru se zobrazuj&iacute; pouze v re&#382;imu &uacute;pravy skici. Jedinou v&yacute;jimkou je <a href="#Sketcher_toolbar">panel n&aacute;stroj&#367; Sketcheru</a>, kter&yacute; se zobrazuje pouze v p&#345;&iacute;pad&#283;, &#382;e &#382;&aacute;dn&aacute; skica nen&iacute; v re&#382;imu &uacute;pravy.
 </p><p>N&#283;kter&eacute; n&aacute;stroje jsou tak&eacute; k dispozici v kontextov&eacute;m menu <a href="../3D_View.html" title="3D View">3D pohledu</a>, kdy&#382; je skica v re&#382;imu &uacute;prav, nebo v kontextov&yacute;ch menu <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">dialogov&eacute;ho okna Sketcher</a>.
 </p><p><span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>: Pokud je skica v re&#382;imu &uacute;prav, panel n&aacute;stroj&#367; Struktura je skryt&yacute;, proto&#382;e &#382;&aacute;dn&yacute; z jeho n&aacute;stroj&#367; nelze pou&#382;&iacute;t. 
+</p><p><span id="General"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="General">General</span></h3>
-</div>
+<h3><span id="Obecn.C3.A9"></span><span class="mw-headline" id="Obecn&eacute;">Obecn&eacute;</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="Sketcher_toolbar">Sketcher toolbar</span></h4>
 </div>
@@ -805,12 +804,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118110711
+Cached time: 20260118110735
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.391 seconds
-Real time usage: 0.655 seconds
+CPU time usage: 0.408 seconds
+Real time usage: 0.547 seconds
 Preprocessor visited node count: 1563/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
@@ -821,19 +820,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.433      1 -total
- 17.81%    6.488      1 Template:Sketcher_Tools_navi/cs
- 17.36%    6.324     36 Template:Version
- 12.64%    4.605      2 Template:Navigation_menu_2
- 12.17%    4.433      1 Template:Userdocnavi/cs
-  7.72%    2.811      1 Template:PropertyView
-  6.89%    2.511      2 Template:Docnav
-  6.29%    2.290      1 Template:TOCright
-  5.15%    1.877      6 Template:Caption
-  4.91%    1.788     14 Template:KEY
+100.00%   40.907      1 -total
+ 25.70%   10.514      1 Template:Sketcher_Tools_navi/cs
+ 17.26%    7.059      2 Template:Navigation_menu_2
+ 14.11%    5.770      1 Template:Userdocnavi/cs
+ 10.10%    4.131      1 Template:PropertyView
+  7.73%    3.161     36 Template:Version
+  6.92%    2.831      5 Template:MenuCommand
+  6.37%    2.604      6 Template:Caption
+  6.09%    2.491      1 Template:Variable
+  5.83%    2.383      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110710 and revision id 1740223. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110734 and revision id 1740225. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
