Created page with "* [[Image:Sketcher_LeaveSketch.svg|32px]] [[Sketcher_LeaveSketch|Opustit náčrt]]: Ukončí režim úprav náčrtu a zavře [[Sketcher_Dialog|dialogové okno Sketcher]]."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -104,9 +104,7 @@
 <p><span id="Edit_Mode_toolbar"></span>
 </p>
 <h4><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_re.C5.BEimu_.C3.BAprav"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_re&#382;imu_&uacute;prav">N&aacute;strojov&aacute; li&scaron;ta re&#382;imu &uacute;prav</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_LeaveSketch.svg&amp;filetimestamp=20231231201626&amp;.html" class="mw-file-description"><img src="../File/Sketcher_LeaveSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Leave Sketch</a>: Finishes sketch edit mode and closes the <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Sketcher Dialog</a>.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_LeaveSketch.svg&amp;filetimestamp=20231231201626&amp;.html" class="mw-file-description"><img src="../File/Sketcher_LeaveSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Opustit n&aacute;&#269;rt</a>: Ukon&#269;&iacute; re&#382;im &uacute;prav n&aacute;&#269;rtu a zav&#345;e <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">dialogov&eacute; okno Sketcher</a>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ViewSketch.svg&amp;filetimestamp=20231231201925&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ViewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ViewSketch.html" title="Sketcher ViewSketch">Align View to Sketch</a>: Aligns the <a href="../3D_View.html" title="3D View">3D View</a> with the sketch.</li></ul>
 </div>
@@ -790,13 +788,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118111610
+Cached time: 20260118111749
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.401 seconds
-Real time usage: 0.578 seconds
-Preprocessor visited node count: 1556/1000000
+CPU time usage: 0.409 seconds
+Real time usage: 0.634 seconds
+Preprocessor visited node count: 1555/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -806,19 +804,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.191      1 -total
- 24.97%    8.038      1 Template:Sketcher_Tools_navi/cs
- 15.66%    5.042      2 Template:Navigation_menu_2
- 13.66%    4.396      1 Template:Userdocnavi/cs
- 10.93%    3.520      1 Template:PropertyView
-  9.41%    3.030      2 Template:Docnav
-  6.48%    2.085     36 Template:Version
-  6.15%    1.980      6 Template:Caption
-  6.03%    1.942      1 Template:Variable
-  5.02%    1.616     14 Template:KEY
+100.00%   35.867      1 -total
+ 25.88%    9.283      1 Template:Sketcher_Tools_navi/cs
+ 12.98%    4.655      2 Template:Navigation_menu_2
+ 12.74%    4.570      1 Template:Userdocnavi/cs
+ 10.95%    3.926      1 Template:PropertyView
+  9.44%    3.386     36 Template:Version
+  7.36%    2.641      5 Template:MenuCommand
+  6.50%    2.333      8 Template:VersionPlus
+  5.14%    1.845      1 Template:Variable
+  4.88%    1.750      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111610 and revision id 1740243. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111749 and revision id 1740245. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
