Created page with ":* [[Image:Sketcher_CreateArcOfParabola.svg|32px]] [[Sketcher_CreateArcOfParabola|Parabolický oblouk]]: Vytvoří parabolický oblouk."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -127,9 +127,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Create3PointArc.svg&amp;filetimestamp=20240101085650&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Create3PointArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Create3PointArc.html" title="Sketcher Create3PointArc">Oblouk ze 3 bod&#367;</a>: Vytvo&#345;&iacute; oblouk z jeho koncov&yacute;ch bod&#367; a bodu pod&eacute;l oblouku. <a href="../index.php?title=Template;Verze&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Verze (page does not exist)">Template:Verze</a>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateArc.html" title="Sketcher CreateArc">Oblouk ze st&#345;edu</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfEllipse.svg&amp;filetimestamp=20240101170312&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfEllipse.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfEllipse.html" title="Sketcher CreateArcOfEllipse">Eliptick&yacute; oblouk</a>: Vytvo&#345;&iacute; eliptick&yacute; oblouk.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfHyperbola.svg&amp;filetimestamp=20240101170323&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfHyperbola.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfHyperbola.html" title="Sketcher CreateArcOfHyperbola">Hyperbolick&yacute; oblouk</a>: Vytvo&#345;&iacute; hyperbolick&yacute; oblouk.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfParabola.svg&amp;filetimestamp=20240101170333&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfParabola.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfParabola.html" title="Sketcher CreateArcOfParabola">Parabolic Arc</a>: Creates an parabolic arc.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfParabola.svg&amp;filetimestamp=20240101170333&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfParabola.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfParabola.html" title="Sketcher CreateArcOfParabola">Parabolick&yacute; oblouk</a>: Vytvo&#345;&iacute; parabolick&yacute; oblouk.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CompCreateConic"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateCircle.svg&amp;filetimestamp=20240101085932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create Circle/Ellipse:</span></li></ul>
 </div>
@@ -758,13 +756,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118113351
+Cached time: 20260118113416
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.460 seconds
-Real time usage: 0.726 seconds
-Preprocessor visited node count: 1530/1000000
+CPU time usage: 0.347 seconds
+Real time usage: 0.505 seconds
+Preprocessor visited node count: 1529/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -774,19 +772,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.978      1 -total
- 20.67%   10.535      1 Template:Sketcher_Tools_navi/cs
- 15.36%    7.829      1 Template:PropertyView
- 12.19%    6.214      2 Template:Navigation_menu_2
- 10.43%    5.317      1 Template:Userdocnavi/cs
-  8.78%    4.478      5 Template:MenuCommand
-  6.49%    3.308      2 Template:Docnav
-  6.19%    3.155      1 Template:Variable
-  6.15%    3.137     34 Template:Version
-  5.78%    2.948      6 Template:Caption
+100.00%   43.207      1 -total
+ 28.87%   12.475      2 Template:Docnav
+ 14.92%    6.447      1 Template:Sketcher_Tools_navi/cs
+ 10.18%    4.399      2 Template:Navigation_menu_2
+  9.62%    4.157      1 Template:Userdocnavi/cs
+  8.39%    3.626      1 Template:PropertyView
+  7.58%    3.275      1 Template:TOCright
+  5.62%    2.428     34 Template:Version
+  4.60%    1.989      1 Template:Variable
+  3.91%    1.691      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118113350 and revision id 1740292. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118113416 and revision id 1740294. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
