Updated page TechDraw ExtensionDrawCosmArc/fr

--- a/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
@@ -20,7 +20,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Lignes centrales/filetages &rarr; Arc cosm&eacute;tique
+<td class="ctEven">TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; Arc cosm&eacute;tique
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -112,15 +112,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117145648
+Cached time: 20260118113617
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.240 seconds
+CPU time usage: 0.067 seconds
+Real time usage: 0.155 seconds
 Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25833/2097152 bytes
-Template argument size: 10204/2097152 bytes
+Post&#8208;expand include size: 25847/2097152 bytes
+Template argument size: 10218/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -128,18 +128,18 @@ Unstrip post&#8208;expand size: 1130/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   75.145      1 -total
- 30.22%   22.706      1 Template:GuiCommand/fr
- 27.57%   20.715      1 Template:TechDraw_Tools_navi/fr
- 19.67%   14.780      2 Template:Navigation_menu_2
- 11.75%    8.833      1 Template:Userdocnavi/fr
- 11.11%    8.345      2 Template:Docnav/fr
-  6.05%    4.547      1 Template:MenuCommand
-  5.53%    4.157      1 Template:Button
-  5.34%    4.011      1 Template:Caption
+100.00%   35.083      1 -total
+ 38.70%   13.579      1 Template:TechDraw_Tools_navi/fr
+ 22.69%    7.960      2 Template:Navigation_menu_2
+ 13.60%    4.772      1 Template:Userdocnavi/fr
+ 10.86%    3.810      1 Template:Caption
+ 10.52%    3.689      1 Template:GuiCommand/fr
+  8.68%    3.046      2 Template:Docnav/fr
+  8.65%    3.035      1 Template:MenuCommand
+  7.01%    2.460      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260117145647 and revision id 1739599. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260118113617 and revision id 1740306. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
